--- a/index.html
+++ b/index.html
@@ -35,4 +35,9 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="foot">
+        <p>Добрые ремесла, г Краснодар, ул 3-й Звенигородский проезд, 81. +79094515319</p>
+    </div>
+</footer>
 </html>
